feat(pulse): optimise for mobile
